<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/input"
      android:layout_weight="0"
    />

    <EditText
      android:id="@+id/text_input"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@android:drawable/edit_text"
      android:scrollbars="vertical"
      android:gravity="top"
      android:layout_weight="1"
    />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/text_input"
      android:text="@string/translation"
      android:layout_weight="0"
    />

    <de.zieren.rot13.ScrollingEditText
      android:id="@+id/text_output"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@android:drawable/edit_text"
      android:editable="false"
      android:scrollbars="vertical"
      android:gravity="top"
      android:layout_weight="1"
    />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
          android:id="@+id/buttonPaste"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        android:layout_weight="1"
          android:text="@string/paste"
        />

        <Button
          android:id="@+id/buttonCopy"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        android:layout_weight="1"
          android:text="@string/copy"
        />

        <Button
          android:id="@+id/buttonClear"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        android:layout_weight="1"
          android:text="@string/clear"
        />

        <Button
          android:id="@+id/buttonExit"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        android:layout_weight="1"
          android:text="@string/exit"
        />
    </LinearLayout>

</LinearLayout>